--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,261 @@
-#container {
-	width: 100%;
-	height: 100vh;
-}
-#wall {
-	width: 100%;
-	height: 2000px;
-	opacity: 0.8;
-}
 #banner {
-	background-image: url(https://i.ytimg.com/vi/-yx7GSx76sM/maxresdefault.jpg);
+	background-image: url(http://www.hdfondos.eu/preview/get_photo/371760/1920/1200);
 	width: 100%;
 	height: 100vh;
 	position: fixed;
 	top: 0;
 }
-header{
-	position: top 0px;
-	color:white;
+
+.boton2 {
+	/* arreglar problema al achicar*/
+	background-color: none;
+	color: #51baa4;
+	border: 1.5px solid #51baa4;
+	border-radius: 30px;
+	padding: 5px 50px;
+	position: relative;
+	top: 15px;
+	left: 10%;
+	font-size: 20px;
+	font-weight: bold;
 }
+
+.boton3 {
+	background-color: none;
+	color: #51baa4;
+	border: 1.5px solid #51baa4;
+	border-radius: 30px;
+	padding: 15px 40px;
+	font-size: 20px;
+	font-weight: bold;
+	position: relative;
+	bottom: 75px;
+}
+
+#botonv {
+	background-color: #51baa4;
+	color: #ffffff;
+	border-radius: 30px;
+	padding: 15px 35px;
+	position: relative;
+	top: 16px;
+	right: 18px;
+}
+
+.contheader {
+	position: relative;
+	display: inline-block;
+	width: 50%;
+	height: 100%;
+}
+
+.contheader2 {
+	position: relative;
+	display: inline-block;
+	width: 50%;
+	height: 100%;
+}
+
+#container {
+	width: 100%;
+	height: 100vh;
+}
+
+#demoimg {
+	/* arreglar problema al achicar*/
+	max-width: 100%;
+	height: auto;
+	background-color: #ffffff;
+	text-align: center;
+	font-family: courier;
+	color: #25383b;
+	display: block;
+	position: relative;
+	bottom: 75px;
+}
+
+#demoimg div {
+	/* arreglar problema al achicar*/
+	font-size: 0px;
+	margin: 12% auto;
+	display: block;
+	width: 1000px;
+}
+
+#demoimg h2 {
+	font-size: 45px;
+	position: relative;
+	top: 120px;
+}
+
+#demoimg span {
+	max-width: 80px;
+	font-size: 20px;
+	position: relative;
+	top: 110px;
+}
+
+#diamond {
+	width: 150px
+}
+
+header {
+	font-size: 0px;
+	width: 100%;
+	height: 80px;
+	font-family: courier;
+	color: white;
+}
+
 header h1 {
-	display: inline-block;
-	/*text-align: left;*/
-	margin: 20px 20px;
-}
-#menu {
-	/*text-align:right;*/ 
 	position: absolute;
-	left: 96%;
-	top: 30px;
+	top: 3%;
+	bottom: auto;
+	left: 7.5%;
+	right: auto;
+	font-size: 40px;
+}
+
+#images img {
+	font-size: 0px;
+	width: 250px;
+}
+
+#listbutton { 
+	height: 50px;
+	width: 97%;
+}
+
+#menu {
+	position: absolute;
+	top: 43%;
+	bottom: auto;
+	left: auto;
+	right: 7.5%;
+	font-size: 20px;
+	
+}
+
+#iniciodiam {
+	position: relative;
+	color: #ffffff;
+	margin: 0;
+	font-family: bookman;
+	text-align: center;
+	height: 550px;
+	max-width: auto;
+	line-height: 50px;
+}
+
+#iniciodiam h2 {
+	font-size: 40px;
+}
+
+#iniciodiam span {
+	font-size: 25px;
+}
+
+#paragraphs {
+	display: block;
+	background-color: #eeeeee;
+	max-width: 100%;
+	height: 950px;
+	position: relative;
+}
+
+#paragraph1 {
+	background-color: #ffffff;
+	height: 320px;
+	width: 80%;
+	font-family: courier;
+	color: #555555;
+	margin: 100px auto;
+	position: relative;
+	top: 100px;
+	border-radius: 30px;
+}
+
+#paragraph1 img {
 	display: inline-block;
+	float: left;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 100%;
+	width: 50%;
+}
+
+#paragraph2 {
+	background-color: #ffffff;
+	height: 320px;
+	width: 80%;
+	font-family: courier;
+	color: #555555;
+	margin: 100px auto;
+	position: relative;
+	top: 100px;
+	border-radius: 30px;
+}
+
+#paragraph2 img {
+	display: inline-block;
+	float: right;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 50%;
+}
+
+#text1 {
+	display: inline-block;
+	height: 100%;
+	width: 50%;
+	position: relative;
+	left: 49%;
+}
+
+#text1 h2 {
+	/* arreglar problema al achicar*/
+	max-width: auto;
+	max-height: 100%;
+	margin-top: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#text1 p {
+	/* arreglar problema al achicar*/
+	margin-top: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#text2 {
+	display: inline-block;
+	height: 100%;
+	width: 50%;
+	position: relative;
+}
+
+#text2 h2 {
+	/* arreglar problema al achicar*/
+	max-width: auto;
+	max-height: 100%;
+	margin-top: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#text2 p {
+	/* arreglar problema al achicar*/
+	margin-top: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#wall {
+	width: 100%;
+	height: 2000px;
+	opacity: 0.99;
 }
